Bug 1097354 - Silence "adding an unknown subview" warning by calling _addKnownSubview. r=smichaud